CSCEXAM-000 Rework for anonymisation actions